Fix Datatable Wrap Space

--- a/preprocessor/less/v_1/dashboard.less
+++ b/preprocessor/less/v_1/dashboard.less
@@ -44,6 +44,13 @@ div.dataTables_wrapper{
 	div.dataTables_info{
 		white-space: inherit;
 	}
+	.child{
+		.li{
+			span.dtr-data{
+				white-space: normal;
+			}
+		}
+	}
 }
 
 @media print {
